<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity ="center"
    tools:context="project.team6.umbuy.presentation.CreateAdActivity"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fillViewport="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="0dp"
        android:id="@+id/scrollView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/create_ad_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="@string/create_ad_title" />

            <EditText
                android:id="@+id/create_ad_title_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:background="@color/colorSub"
                android:inputType="textPersonName"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/create_ad_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="@string/create_ad_price" />

            <EditText
                android:id="@+id/create_ad_price_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:background="@color/colorSub"
                android:inputType="numberDecimal"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/create_ad_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="@string/create_ad_category" />

            <EditText
                android:id="@+id/create_ad_category_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:background="@color/colorSub"
                android:inputType="textPersonName"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/create_ad_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:text="@string/create_ad_description" />

            <EditText
                android:id="@+id/create_ad_description_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:background="@color/colorSub"
                android:textColor="#000000"
                android:inputType="textMultiLine" />

            <ImageView
                android:id="@+id/create_ad_picture"
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:layout_gravity="center"
                android:rotation="90"
                android:layout_marginTop="10dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/create_ad_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="ask"
                android:text="@string/create_ad_upload" />

            <Button
                android:id="@+id/create_ad_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/create_ad_submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
